--- a/templates/booking.html
+++ b/templates/booking.html
@@ -14,7 +14,7 @@
           <hr />
           <div class="card-body mx-3">
               <div class="row">
-                  <input class="form-control" type="hidden" name="weekday" value="{{ days[day][1] }}">
+                  <input class="form-control" type="hidden" name="weekday" value="{{ day }}">
                   <input class="form-control" type="hidden" name="time" value="{{ time + ':00' }}">
                   <input class="form-control" type="hidden" name="teacher" value="{{ teacher.id }}">
               </div>
