--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
             <div class="row">
               <div class="col-3"><img src="{{ teacher.picture }}" class="img-fluid" alt=""></div>
               <div class="col-9">
-                <p class="float-right">Рейтинг: {{ teacher.rating }} Ставка: {{ teacher.price }}₽ / час</p>
+                <p class="float-right">Рейтинг: {{ teacher.rating }} Ставка: {{ teacher.price|int }}₽ / час</p>
                 <h2 class="h4">{{ teacher.name }}</h2>
                 <p>{{ teacher.about }}</p>
                 <a href="{{ url_for('render_profiles', teacher_id=teacher.id) }}" class="btn btn-outline-primary btn-sm mr-3 mb-2">Показать информацию и расписание</a>
